--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,15 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
-
+/* 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+} */
 @layer base {
   * {
     @apply border-border;
